@@ -372,7 +372,7 @@ function check_subdomain_data(&$tpl, &$sql, $user_id, $dmn_name) {
 		}
 
 		// First check if input string is a valid domain names
-		if(!validates_subdname($sub_name, $dmn_name)) {
+		if(!validates_subdname($sub_name, decode_idna($dmn_name))) {
 			set_page_message($validation_err_msg);
 			return;
 		}
@@ -382,8 +382,6 @@ function check_subdomain_data(&$tpl, &$sql, $user_id, $dmn_name) {
 
 		if (subdmn_exists($sql, $user_id, $domain_id, $sub_name)) {
 			set_page_message(tr('Subdomain already exists or is not allowed!'));
-		} elseif (!validates_subdname($sub_name, $dmn_name)) {
-			set_page_message($validation_err_msg);
 		} elseif (mount_point_exists($dmn_id, array_decode_idna($sub_mnt_pt, true))) {
 			set_page_message(tr('Mount point already in use!'));
 		} elseif (!validates_mpoint($sub_mnt_pt)) {
