@@ -51,14 +51,21 @@ $tpl->assign(
 );
 
 // Check, if e-mail is active for this user
-list($dmn_id, $dmn_name, $dmn_gid, $dmn_uid, $dmn_created_id, $dmn_created, $dmn_last_modified,
-	$dmn_mailacc_limit, $dmn_ftpacc_limit, $dmn_traff_limit, $dmn_sqld_limit, $dmn_sqlu_limit,
-	$dmn_status, $dmn_als_limit, $dmn_subd_limit, $dmn_ip_id, $dmn_disk_limit, $dmn_disk_usage,
-	$dmn_php, $dmn_cgi) = get_domain_default_props($sql, $_SESSION['user_id']
-);
+
+// Check, if e-mail is active for this user
+list(
+		$dmn_id, $dmn_name, $dmn_gid, $dmn_uid, $dmn_created_id, $dmn_created, $dmn_last_modified,
+		$dmn_mailacc_limit, $dmn_ftpacc_limit, $dmn_traff_limit, $dmn_sqld_limit, $dmn_sqlu_limit,
+		$dmn_status, $dmn_als_limit, $dmn_subd_limit, $dmn_ip_id, $dmn_disk_limit, $dmn_disk_usage,
+		$dmn_php, $dmn_cgi, $backup
+) = get_domain_default_props($sql, $_SESSION['user_id']);
 
 if ($dmn_mailacc_limit == -1) {
 	$tpl->assign('ACTIVE_EMAIL', '');
+}
+
+if($backup == 'no') {
+	tpl->assign('ACTIVE_BACKUP', '');
 }
 
 /*
