@@ -74,6 +74,7 @@
                </tr>
               </table></td>
             </tr>
+            <!-- BDP: active_backup -->
             <tr>
              <td>&nbsp;</td>
              <td class="content"><table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -84,6 +85,7 @@
                </tr>
               </table></td>
             </tr>
+            <!-- EDP: active_backup -->
             <!-- BDP: active_email -->
             <tr>
              <td>&nbsp;</td>
